--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="body">
 			<div class="Left">	
 				<ul class="list1">
-					<li><a href="index.html"><img src="./graphics/danieldibraw.PNG." width=30px height=30px></a></li>
+					<li><a href="index.html"><img src="./graphics/danieldibraw.png." width=30px height=30px></a></li>
 					<li><a href="about.html">About &#9830</a></li>
 					<li><a href="sleep.html">Sleep &#9830</a></li>
 					<li><a href="bible-codes.html">Bible Codes &#9830</a></li>
