--- a/bible-codes.html
+++ b/bible-codes.html
@@ -13,7 +13,7 @@
 				<ul class="list1">
 					<li><a href="index.html"><img src="./graphics/danieldibraw.png." width=30px height=30px></a></li>
 					<li><a href="about.html">About &#9830</a></li>
-					<li><a href="Sleep.html">Sleep &#9830</a></li>
+					<li><a href="sleep.html">Sleep &#9830</a></li>
 					<li><a href="bible-codes.html">Bible Codes &#9830</a></li>
 					<li><a href="contacts.html">Contacts &#9830</a></li>
 					<br>
