--- a/bible-codes.html
+++ b/bible-codes.html
@@ -3,7 +3,7 @@
 	<title>Bible Codes</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="./css/style_main.css">
+	<link rel="stylesheet" type="text/css" href="./css/style_main.css">
 </head>
 
 <body>
@@ -11,9 +11,10 @@
 		<div class="body">
 			<div class="Left">		
 				<ul class="list1">
-					<li><a href="index.html"><img src="./graphics/danieldibraw.png." width=30px height=30px></a></li>
+					<li><a href="index.html"><img src="./graphics/danieldibraw.png" width=30px height=30px></a></li>
 					<li><a href="about.html">About &#9830</a></li>
 					<li><a href="sleep.html">Sleep &#9830</a></li>
+					<li><a href="mental-health.html">Mental Health &#9830</a></li>
 					<li><a href="bible-codes.html">Bible Codes &#9830</a></li>
 					<li><a href="contacts.html">Contacts &#9830</a></li>
 					<br>
