--- a/sleep.html
+++ b/sleep.html
@@ -32,7 +32,7 @@
 					<div class="box zone"><img src="./graphics/b0003_why we sleep.JPEG"></div>
 				</div>
 				<p>At first glance, I was attracted to the title of this book. Later on, I chanced upon a review by Bill on this book at <a href="https://www.gatesnotes.com/Books/Why-We-Sleep" target="_blank">GatesNotes</a> and I could totally relate to what he was saying when he mentioned that "I was obsessed with my work". I had the same challenge. When I am on something, I just want to get it done before I can wrap up the day. Before I know it, it is past midnight already and I am still not done and I just had to finish it. Sometimes it is due to a deadline that I need to stay up to complete that piece of work. On many other occasions, I was just so deeply engaged at what I was doing that I simply lost track of time.</p>
-				<p>I do code a little bit and I find this especially true from the perspective of programming. It is very easy to get carried away when you are writing codes and testing them. When I encounter that nasty bug that I just want to get rid of, sleeping or even eating is the last thing on my mind. Nonetheless, these are not excuses to stay up late and not getting enough sleep. Check out Bill’s review on <a href="https://www.gatesnotes.com/Books/Why-We-Sleep" target="_blank">GatesNotes</a>.</p>
+				<p>I do code a little bit and I find this especially true from the perspective of programming. It is very easy to get carried away when you are writing codes and testing them. When I encounter that nasty bug that I just want to get rid of, sleeping or even eating is the last thing on my mind. Nonetheless, these are not excuses to stay up late and not getting enough sleep. Check out Bill's review on <a href="https://www.gatesnotes.com/Books/Why-We-Sleep" target="_blank">GatesNotes</a>.</p>
 				<hr>
 
 				<h1>Why do we dream?</h1>
@@ -53,11 +53,11 @@
 				<hr>
 
 				<h1>The importance of sleep</h1>
-				<div class="grid-wrapper box">
-					<div class="box zone"><img src="./graphics/b0001_the importance of sleep.JPEG"></div>
-				</div>
-				<p>This video is titled "The benefits of a good night's sleep". I would say it is much more than benefits. It is important and critical to have one.</p>
-				<p>Numerous research have shown that the gut is our "second brain". How you feel during the day depends a lot on how you feel in your gut. Not only does sufficient sleep gives you memory benefits, it also restores your gut and other bodily organs and functions. The lack of good sleep in the long term on the other hand increases toxin level, and increases inflammation in the body, leading to chronic conditions in our body.</p>
+				<iframe width="426" height="240" src="https://www.youtube.com/embed/gedoSfZvBgE?autoplay=1">
+				</iframe>
+				<p>"a fifth of your body's circulatory blood being channeled to it (your brain) as you drift off (to sleep)..." and when we sleep, there is "an intensely active period of restructuring that's crucial for how our memory works..."</p>
+				<p>"Sleep isn't lost time, or just a way to rest when all our important work is done. Instead, it is a critical function during which your body balances and regulates its vital systems, affecting respiration and regulating everything from circulation to growth and immune response."</p>
+				<p>Personally, I think two most important reasons to sleep well would be for brain health and for gut health. Numerous research have shown that the gut is our "second brain". How you feel during the day depends a lot on how you feel in your gut. Not only does sufficient sleep gives you memory benefits, it also restores your gut and other bodily organs and functions. The lack of good sleep in the long term on the other hand increases toxin level, and increases inflammation in the body, leading to chronic conditions in our body.</p>
 				<p>Google "Sleep and gut health". You will be surprise how a good sleep in the long term can solve many chronic bodily conditions and free you from long term medication.</p>
 				<p>Sleep well my friends!</p>
 
