--- a/sleep.html
+++ b/sleep.html
@@ -53,8 +53,10 @@
 				<hr>
 
 				<h1>The importance of sleep</h1>
-				<iframe width="426" height="240" src="https://www.youtube.com/embed/gedoSfZvBgE?autoplay=1">
-				</iframe>
+				<div class="video-container">
+					<iframe class="video-iframe" src="https://www.youtube.com/embed/gedoSfZvBgE?autoplay=1" frameborder="0" allowfullscreen>
+					</iframe>
+				</div>
 				<p>"a fifth of your body's circulatory blood being channeled to it (your brain) as you drift off (to sleep)..." and when we sleep, there is "an intensely active period of restructuring that's crucial for how our memory works..."</p>
 				<p>"Sleep isn't lost time, or just a way to rest when all our important work is done. Instead, it is a critical function during which your body balances and regulates its vital systems, affecting respiration and regulating everything from circulation to growth and immune response."</p>
 				<p>Personally, I think the two most important reasons to sleep well would be for brain health and for gut health. Numerous research have shown that the gut is our "second brain". How you feel during the day depends a lot on how you feel in your gut. Not only does sufficient sleep gives you memory benefits, it also restores your gut and other bodily organs and functions. The lack of good sleep in the long term on the other hand increases toxin level, and increases inflammation in the body, leading to chronic conditions in our body.</p>
