--- a/sleep.html
+++ b/sleep.html
@@ -36,8 +36,9 @@
 				<hr>
 
 				<h1>Why do we dream?</h1>
-				<div class="grid-wrapper box">
-					<div class="box zone"><img src="./graphics/b0002_why do we dream.JPEG"></div>
+				<div class="video-container">
+					<iframe class="video-iframe" src="https://www.youtube.com/embed/2W85Dwxx218?autoplay=1" frameborder="0" allowfullscreen>
+					</iframe>
 				</div>
 				<p>Why do we dream? - Amy Adkins.</p>
 				<p>Love this short Ted-ed video on why we dream. Some interesting theories from the video.</p>
