--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<div class="Left">	
 				<ul class="list1">
 					<li><a href="index.html"><img src="./graphics/danieldibraw.png" width=30px height=30px></a></li>
+					<li><a href="story.html">Story &#9830</a></li>
 					<li><a href="about.html">About &#9830</a></li>
 					<li><a href="sleep.html">Sleep &#9830</a></li>
 					<li><a href="mental-health.html">Mental Health &#9830</a></li>
