--- a/sleep.html
+++ b/sleep.html
@@ -30,7 +30,7 @@
 				
 				<h1>Review: Why we sleep?</h1>
 				<div class="grid-wrapper box">
-					<div class="box zone"><img src="./graphics/b0003_why we sleep.JPEG"></div>
+					<div class="box zone"><img src="./graphics/b0003b_why we sleep.jpg"></div>
 				</div>
 				<p>At first glance, I was attracted to the title of this book. Later on, I chanced upon a review by Bill on this book at <a href="https://www.gatesnotes.com/Books/Why-We-Sleep" target="_blank">GatesNotes</a> and I could totally relate to what he was saying when he mentioned that "I was obsessed with my work". I had the same challenge. When I am on something, I just want to get it done before I can wrap up the day. Before I know it, it is past midnight already and I am still not done and I just had to finish it. Sometimes it is due to a deadline that I need to stay up to complete that piece of work. On many other occasions, I was just so deeply engaged at what I was doing that I simply lost track of time.</p>
 				<p>I do code a little bit and I find this especially true from the perspective of programming. It is very easy to get carried away when you are writing codes and testing them. When I encounter that nasty bug that I just want to get rid of, sleeping or even eating is the last thing on my mind. Nonetheless, these are not excuses to stay up late and not getting enough sleep. Check out Bill's review on <a href="https://www.gatesnotes.com/Books/Why-We-Sleep" target="_blank">GatesNotes</a>.</p>
