--- a/sleep.html
+++ b/sleep.html
@@ -22,24 +22,26 @@
 			</div>
 			<div class="Middle">
 				<h1>.SLEEP.</h1>
-				<h1>Sleep, health and memory</h1>
-				<div class="grid-wrapper box">
-					<div class="box zone"><img src="./graphics/b0004_sleep our superpower.png"></div>
-				</div>
-				<hr>
-				
 				<h1>Review: Why we sleep?</h1>
 				<div class="grid-wrapper box">
 					<div class="box zone"><img src="./graphics/b0003b_why we sleep.jpg"></div>
 				</div>
 				<p>At first glance, I was attracted to the title of this book. Later on, I chanced upon a review by Bill on this book at <a href="https://www.gatesnotes.com/Books/Why-We-Sleep" target="_blank">GatesNotes</a> and I could totally relate to what he was saying when he mentioned that "I was obsessed with my work". I had the same challenge. When I am on something, I just want to get it done before I can wrap up the day. Before I know it, it is past midnight already and I am still not done and I just had to finish it. Sometimes it is due to a deadline that I need to stay up to complete that piece of work. On many other occasions, I was just so deeply engaged at what I was doing that I simply lost track of time.</p>
 				<p>I do code a little bit and I find this especially true from the perspective of programming. It is very easy to get carried away when you are writing codes and testing them. When I encounter that nasty bug that I just want to get rid of, sleeping or even eating is the last thing on my mind. Nonetheless, these are not excuses to stay up late and not getting enough sleep. Check out Bill's review on <a href="https://www.gatesnotes.com/Books/Why-We-Sleep" target="_blank">GatesNotes</a>.</p>
+				<p>There is also an intriging video by the same author Matt Walker on TED. He starts off by saying, "Men who sleep five hours a night have significantly smaller testicles than those who sleep seven hours or more." (Laughter)..."A lack of sleep will age a man by a decade in that aspect". Check it out.</p>
+				<div class="grid-wrapper-video">
+					<div class="video-container">
+						<iframe class="video-iframe" src="https://embed.ted.com/talks/lang/en/matt_walker_sleep_is_your_superpower" frameborder="0" scrolling="no" allowfullscreen></iframe>
+					</div>
+				</div>
 				<hr>
 
 				<h1>Why do we dream?</h1>
-				<div class="video-container">
-					<iframe class="video-iframe" src="https://www.youtube.com/embed/2W85Dwxx218?autoplay=1" frameborder="0" allowfullscreen>
-					</iframe>
+				<div class="grid-wrapper-video">
+					<div class="video-container">
+						<iframe class="video-iframe" src="https://www.youtube.com/embed/2W85Dwxx218?autoplay=1" frameborder="0" scrolling="no" allowfullscreen>
+						</iframe>
+					</div>
 				</div>
 				<p>Why do we dream? - Amy Adkins.</p>
 				<p>Love this short Ted-ed video on why we dream. Some interesting theories from the video.</p>
@@ -55,9 +57,11 @@
 				<hr>
 
 				<h1>The importance of sleep</h1>
-				<div class="video-container">
-					<iframe class="video-iframe" src="https://www.youtube.com/embed/gedoSfZvBgE?autoplay=1" frameborder="0" allowfullscreen>
-					</iframe>
+				<div class="grid-wrapper-video">
+					<div class="video-container">
+						<iframe class="video-iframe" src="https://www.youtube.com/embed/gedoSfZvBgE?autoplay=1" frameborder="0" scrolling="no" allowfullscreen>
+						</iframe>
+					</div>
 				</div>
 				<p>"a fifth of your body's circulatory blood being channeled to it (your brain) as you drift off (to sleep)..." and when we sleep, there is "an intensely active period of restructuring that's crucial for how our memory works..."</p>
 				<p>"Sleep isn't lost time, or just a way to rest when all our important work is done. Instead, it is a critical function during which your body balances and regulates its vital systems, affecting respiration and regulating everything from circulation to growth and immune response."</p>
