--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>About</title>
+	<title>Inspirations</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./css/style_main.css">
@@ -13,21 +13,39 @@
 				<ul class="list1">
 					<li><a href="index.html"><img src="./graphics/danieldibraw.png" width=30px height=30px></a></li>
 					<li><a href="story.html">Story &#9830</a></li>
-					<li><a href="about.html">About &#9830</a></li>
+					<li><a href="about.html">Inspirations &#9830</a></li>
 					<li><a href="sleep.html">Sleep &#9830</a></li>
 					<li><a href="mental-health.html">Mental Health &#9830</a></li>
+					<li><a href="people.html">People &#9830</a></li>
+					<li><a href="music.html">Music &#9830</a></li>
+					<li><a href="film.html">Film &#9830</a></li>
 					<li><a href="bible-codes.html">Bible Codes &#9830</a></li>
 					<li><a href="contacts.html">Contacts &#9830</a></li>
 				</ul>
 			</div>
 			<div class="Middle">
-				<h1>.ABOUT.</h1>
-				<div class="banner">
-					<div class="box zone"><img src="./graphics/danieldibraw banner.JPEG"></div>
+				<h1>.INSPIRATIONS.</h1>
+				<p>.Dream Different.</p>				
+				<p>.The world that comes alive when you go to sleep.</p>
+				<div class="grid-wrapper box">
+					<div class="box zone"><img src="./graphics/0017_maze sink.JPG"></div>
+					<div class="box zone"><img src="./graphics/0016_code ferrari.JPG"></div>
+					<div class="box zone"><img src="./graphics/0015_china.JPG"></div>
+					<div class="box zone"><img src="./graphics/0014_flats mirror image.JPG"></div>
+					<div class="box zone"><img src="./graphics/0013_bouncing ball lake.JPG"></div>
+					<div class="box zone"><img src="./graphics/0012_coffee left right straight upstairs.JPG"></div>
+					<div class="box zone"><img src="./graphics/0011_charge tennis ball escalator bugs.JPG"></div>
+					<div class="box zone"><img src="./graphics/0010_smoke cigar tables shuttle door ice cream oreo.JPG"></div>
+					<div class="box zone"><img src="./graphics/0009_disorganised slow messy.JPG"></div>
+					<div class="box zone"><img src="./graphics/0008_arrange bottles neat fast.JPG"></div>
+					<div class="box zone"><img src="./graphics/0007_running.JPG"></div>
+					<div class="box zone"><img src="./graphics/0006_laying hands prayer.JPG"></div>
+					<div class="box zone"><img src="./graphics/0005_looking out of window.JPG"></div>
+					<div class="box zone"><img src="./graphics/0004_kick stairs.JPG"></div>
+					<div class="box zone"><img src="./graphics/0003_run fast.JPG"></div>
+					<div class="box zone"><img src="./graphics/0002_agenda content.JPG"></div>
+					<div class="box zone"><img src="./graphics/0001_lesson late.JPG"></div>
 				</div>
-				<p>Daniel was a dream interpreter in Babylonian times. Through this God given ability, he became the second most powerful person after the King, and caused the Babylonian empire to prosper under his stewardship.</p>
-				<p>Dibraw is the hebrew word for cause, reason, intent. A three fold reason. For the reason that Daniel was placed at the right place and at the right time to interpret the King's dream and caused him to prosper beyond his imagination. For the reason that the Holy Spirit inspired this site and not mere man. And for the reason that all the honour and glory is to go to Him and Him alone.</p>
-				<p>May this site inspire  -  not by my own but by the power of the Holy Spirit and the one true King Jesus, who inspire the dreams and ideas that is to come.</p>
 			</div>
 		</div>
 		<div class="footer">
