--- a/bible-codes.html
+++ b/bible-codes.html
@@ -9,17 +9,18 @@
 <body>
 	<div class="container">
 		<div class="body">
-			<div class="Left">		
+			<div class="Left">
 				<ul class="list1">
 					<li><a href="index.html"><img src="./graphics/danieldibraw.png" width=30px height=30px></a></li>
 					<li><a href="story.html">Story &#9830</a></li>
-					<li><a href="about.html">About &#9830</a></li>
+					<li><a href="about.html">Inspirations &#9830</a></li>
 					<li><a href="sleep.html">Sleep &#9830</a></li>
 					<li><a href="mental-health.html">Mental Health &#9830</a></li>
+					<li><a href="people.html">People &#9830</a></li>
+					<li><a href="music.html">Music &#9830</a></li>
+					<li><a href="film.html">Film &#9830</a></li>
 					<li><a href="bible-codes.html">Bible Codes &#9830</a></li>
 					<li><a href="contacts.html">Contacts &#9830</a></li>
-					<br>
-					<br>
 				</ul>
 			</div>
 			<div class="Middle">
@@ -74,6 +75,7 @@
 				<div class="grid-wrapper box">
 					<div class="box zone"><img src="./graphics/bq0009_ehyeh.jpg"></div>
 				</div>
+				<hr>
 
 			</div>
 		</div>
