--- a/contacts.html
+++ b/contacts.html
@@ -9,13 +9,16 @@
 <body>
 	<div class="container">
 		<div class="body">
-			<div class="Left">		
+			<div class="Left">
 				<ul class="list1">
 					<li><a href="index.html"><img src="./graphics/danieldibraw.png" width=30px height=30px></a></li>
 					<li><a href="story.html">Story &#9830</a></li>
-					<li><a href="about.html">About &#9830</a></li>
+					<li><a href="about.html">Inspirations &#9830</a></li>
 					<li><a href="sleep.html">Sleep &#9830</a></li>
 					<li><a href="mental-health.html">Mental Health &#9830</a></li>
+					<li><a href="people.html">People &#9830</a></li>
+					<li><a href="music.html">Music &#9830</a></li>
+					<li><a href="film.html">Film &#9830</a></li>
 					<li><a href="bible-codes.html">Bible Codes &#9830</a></li>
 					<li><a href="contacts.html">Contacts &#9830</a></li>
 				</ul>
@@ -23,6 +26,11 @@
 			<div class="Middle">
 				<h1>.CONTACT.</h1>
 				<p>Thank you so much for visiting.</p>
+				<p>
+				<a href="https://www.instagram.com/daniel.dibraw/" target="_blank"><img src="./graphics/Instagram Logo.png" width=30px height=30px></a>
+				<a href="https://www.facebook.com/danieldibraw-100590431367273/" target="_blank"><img src="./graphics/facebook logo.png" width=30px height=30px></a>
+				<a href="mailto:daniel.dibraw@gmail.com"><img src="./graphics/email-logo-2.png" width=30px height=30px></a>
+				</p>
 			</div>
 		</div>
 		<div class="footer">
