--- a/sleep.html
+++ b/sleep.html
@@ -9,13 +9,16 @@
 <body>
 	<div class="container">
 		<div class="body">
-			<div class="Left">		
+			<div class="Left">
 				<ul class="list1">
 					<li><a href="index.html"><img src="./graphics/danieldibraw.png" width=30px height=30px></a></li>
 					<li><a href="story.html">Story &#9830</a></li>
-					<li><a href="about.html">About &#9830</a></li>
+					<li><a href="about.html">Inspirations &#9830</a></li>
 					<li><a href="sleep.html">Sleep &#9830</a></li>
 					<li><a href="mental-health.html">Mental Health &#9830</a></li>
+					<li><a href="people.html">People &#9830</a></li>
+					<li><a href="music.html">Music &#9830</a></li>
+					<li><a href="film.html">Film &#9830</a></li>
 					<li><a href="bible-codes.html">Bible Codes &#9830</a></li>
 					<li><a href="contacts.html">Contacts &#9830</a></li>
 				</ul>
@@ -68,6 +71,7 @@
 				<p>Personally, I think the two most important reasons to sleep well would be for brain health and for gut health. Numerous research have shown that the gut is our "second brain". How you feel during the day depends a lot on how you feel in your gut. Not only does sufficient sleep gives you memory benefits, it also restores your gut and other bodily organs and functions. The lack of good sleep in the long term on the other hand increases toxin level, and increases inflammation in the body, leading to chronic conditions in our body.</p>
 				<p>Google "Sleep and gut health". You will be surprise how a good sleep in the long term can solve many chronic bodily conditions and free you from long term medication.</p>
 				<p>Sleep well my friends!</p>
+				<hr>
 
 			</div>
 		</div>
