--- a/film.html
+++ b/film.html
@@ -3,6 +3,7 @@
 	<title>Film</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/gif/png" href="./graphics/danieldibraw.png">
 	<link rel="stylesheet" type="text/css" href="./css/style_main.css">
 </head>
 
