--- a/people.html
+++ b/people.html
@@ -34,6 +34,12 @@
 				<p>I chanced upon the term "Apologetics" and (you would have expected) also Ravi's story and his teachings on this amazing topic of defending the Christian faith. Ever since God saved him from his suicide attempt during his teenage years, he had promised to "leave no stone unturned" in his pursuit of defending the Christian faith. He had truly lived out his promise to this day.</p>
 				<p>My first encounter with his message was one where he expounded on what it means to have a coherent worldview - Origin, Meaning, Morality and Destiny - and how Jesus was the only coherent answer amongst all other worldviews. He had explained it so clearly and articulately that any counter argument would likely be deemed a ridicule.</p>
 				<p>#ThankYouRavi</p>
+				<p>"Ravi Zacharias: Origin, Meaning, Morality, Destiny" - Ravi expounds on the need for correspondence and coherence in any worldview.</p>
+				<div class="grid-wrapper-video">
+					<div class="video-container">
+						<iframe class="video-iframe" src="https://youtube.com/embed/B76AOOfKmKs?autoplay=1" frameborder="0" scrolling="no" allowfullscreen></iframe>
+					</div>
+				</div>
 				<p>"Apologetics in the 21st century" - a recent sermon preached in Saddleback Church. Humourous and thought provoking.</p>
 				<div class="grid-wrapper-video">
 					<div class="video-container">
