--- a/about.html
+++ b/about.html
@@ -29,23 +29,23 @@
 				<p>.Dream Different.</p>				
 				<p>.The world that comes alive when you go to sleep.</p>
 				<div class="grid-wrapper box">
-					<div class="box zone"><img src="./graphics/0017_maze sink.JPG"></div>
-					<div class="box zone"><img src="./graphics/0016_code ferrari.JPG"></div>
-					<div class="box zone"><img src="./graphics/0015_china.JPG"></div>
-					<div class="box zone"><img src="./graphics/0014_flats mirror image.JPG"></div>
-					<div class="box zone"><img src="./graphics/0013_bouncing ball lake.JPG"></div>
-					<div class="box zone"><img src="./graphics/0012_coffee left right straight upstairs.JPG"></div>
-					<div class="box zone"><img src="./graphics/0011_charge tennis ball escalator bugs.JPG"></div>
-					<div class="box zone"><img src="./graphics/0010_smoke cigar tables shuttle door ice cream oreo.JPG"></div>
-					<div class="box zone"><img src="./graphics/0009_disorganised slow messy.JPG"></div>
-					<div class="box zone"><img src="./graphics/0008_arrange bottles neat fast.JPG"></div>
-					<div class="box zone"><img src="./graphics/0007_running.JPG"></div>
-					<div class="box zone"><img src="./graphics/0006_laying hands prayer.JPG"></div>
-					<div class="box zone"><img src="./graphics/0005_looking out of window.JPG"></div>
-					<div class="box zone"><img src="./graphics/0004_kick stairs.JPG"></div>
-					<div class="box zone"><img src="./graphics/0003_run fast.JPG"></div>
-					<div class="box zone"><img src="./graphics/0002_agenda content.JPG"></div>
-					<div class="box zone"><img src="./graphics/0001_lesson late.JPG"></div>
+					<div class="box zone"><img src="./graphics/0017_maze sink.JPG">Maze and sinkhole!</div>
+					<div class="box zone"><img src="./graphics/0016_code ferrari.JPG">Coding and Ferrari?</div>
+					<div class="box zone"><img src="./graphics/0015_china.JPG">China visit.</div>
+					<div class="box zone"><img src="./graphics/0014_flats mirror image.JPG">Illusion.</div>
+					<div class="box zone"><img src="./graphics/0013_bouncing ball lake.JPG">Bouncing ball.</div>
+					<div class="box zone"><img src="./graphics/0012_coffee left right straight upstairs.JPG">Navigating..</div>
+					<div class="box zone"><img src="./graphics/0011_charge tennis ball escalator bugs.JPG">Escalator bugs.</div>
+					<div class="box zone"><img src="./graphics/0010_smoke cigar tables shuttle door ice cream oreo.JPG">Smoking cigar.</div>
+					<div class="box zone"><img src="./graphics/0009_disorganised slow messy.JPG">Disorganised mess.</div>
+					<div class="box zone"><img src="./graphics/0008_arrange bottles neat fast.JPG">Arranging bottles.</div>
+					<div class="box zone"><img src="./graphics/0007_running.JPG">Dashing.</div>
+					<div class="box zone"><img src="./graphics/0006_laying hands prayer.JPG">Laying on of hands.</div>
+					<div class="box zone"><img src="./graphics/0005_looking out of window.JPG">Looking out the window.</div>
+					<div class="box zone"><img src="./graphics/0004_kick stairs.JPG">Kick Stairs.</div>
+					<div class="box zone"><img src="./graphics/0003_run fast.JPG">Zoom Zoom!</div>
+					<div class="box zone"><img src="./graphics/0002_agenda content.JPG">Program list.</div>
+					<div class="box zone"><img src="./graphics/0001_lesson late.JPG">Late for lesson.</div>
 				</div>
 			</div>
 		</div>
