--- a/people.html
+++ b/people.html
@@ -26,6 +26,19 @@
 			</div>
 			<div class="Middle">
 				<h1>.PEOPLE.</h1>
+				<h1>.Steve Jobs.</h1>
+				<div class="grid-wrapper box">
+					<div class="box zone"><img src="./graphics/people_steve_jobs.jpg"></div>
+				</div>
+				<p>This is one of the most amazing visionary I have known. We never knew that the smart phone would become one of the most indispensible tool of our generation and Steve saw that vision when he created the iphone. Yes, I love Apple.</p>
+				<p>"Steve Jobs: 2005 Stanford Commencement Speech"</p>
+				<div class="grid-wrapper-video">
+					<div class="video-container">
+						<iframe class="video-iframe" src="https://youtube.com/embed/UF8uR6Z6KLc?autoplay=1" frameborder="0" scrolling="no" allowfullscreen></iframe>
+					</div>
+				</div>
+				<hr>
+				
 				<h1>.Ravi Zacharias.</h1>
 				<div class="grid-wrapper box">
 					<div class="box zone"><img src="./graphics/people_ravi_zacharias.jpg"></div>
