--- a/people.html
+++ b/people.html
@@ -31,7 +31,7 @@
 					<div class="box zone"><img src="./graphics/people_steve_jobs.jpg"></div>
 				</div>
 				<p>This is one of the most amazing visionary I have known. We never knew that the smart phone would become one of the most indispensible tool of our generation and Steve saw that vision when he created the iphone. Yes, I love Apple.</p>
-				<p>"Steve Jobs: 2005 Stanford Commencement Speech"</p>
+				<p>"Steve Jobs: 2005 Stanford Commencement Speech" - Be inspired by the commencement speech that Steve made at Stanford University in 2005. It continues to inspire me today.</p>
 				<div class="grid-wrapper-video">
 					<div class="video-container">
 						<iframe class="video-iframe" src="https://youtube.com/embed/UF8uR6Z6KLc?autoplay=1" frameborder="0" scrolling="no" allowfullscreen></iframe>
