--- a/film.html
+++ b/film.html
@@ -26,7 +26,15 @@
 			</div>
 			<div class="Middle">
 				<h1>.FILM.</h1>
-				<p>Stay tuned.</p>
+				<div class="grid-wrapper box">
+					<div class="box zone"><img src="./graphics/f a beautiful mind.JPG">A Beautiful Mind</div>
+					<div class="box zone"><img src="./graphics/f back to the future.JPG">Back to the Future</div>
+					<div class="box zone"><img src="./graphics/f better days.JPG">Better Days</div>
+					<div class="box zone"><img src="./graphics/f eye in the sky.JPG">Eye in the Sky</div>
+					<div class="box zone"><img src="./graphics/f fagara.JPG">Fagara</div>
+					<div class="box zone"><img src="./graphics/f inception.JPG">Inception</div>
+					<div class="box zone"><img src="./graphics/f shawshank redemption.JPG">Shawshank Redemption</div>
+				</div>
 			</div>
 		</div>
 		<div class="footer">
