--- a/film.html
+++ b/film.html
@@ -27,13 +27,21 @@
 			<div class="Middle">
 				<h1>.FILM.</h1>
 				<div class="grid-wrapper box">
-					<div class="box zone"><img src="./graphics/f a beautiful mind.JPG">A Beautiful Mind</div>
-					<div class="box zone"><img src="./graphics/f back to the future.JPG">Back to the Future</div>
-					<div class="box zone"><img src="./graphics/f better days.JPG">Better Days</div>
-					<div class="box zone"><img src="./graphics/f eye in the sky.JPG">Eye in the Sky</div>
-					<div class="box zone"><img src="./graphics/f fagara.JPG">Fagara</div>
-					<div class="box zone"><img src="./graphics/f inception.JPG">Inception</div>
-					<div class="box zone"><img src="./graphics/f shawshank redemption.JPG">Shawshank Redemption</div>
+					<div class="box zone"><img src="./graphics/f a beautiful mind.JPG">A Beautiful Mind (2001)</div>
+					<div class="box zone"><img src="./graphics/f back to the future.JPG">Back to the Future (1985)</div>
+					<div class="box zone"><img src="./graphics/f better days.JPG">Better Days (2019)</div>
+					<div class="box zone"><img src="./graphics/f chungking express.JPG">Chungking Express (1994)</div>
+					<div class="box zone"><img src="./graphics/f control.JPG">Control (2013)</div>
+					<div class="box zone"><img src="./graphics/f eye in the sky.JPG">Eye in the Sky (2015)</div>
+					<div class="box zone"><img src="./graphics/f fagara.JPG">Fagara (2019)</div>
+					<div class="box zone"><img src="./graphics/f inception.JPG">Inception (2010)</div>
+					<div class="box zone"><img src="./graphics/f infernal affairs.JPG">Infernal Affairs (2002)</div>
+					<div class="box zone"><img src="./graphics/f life of pi.JPG">Life of Pi (2012)</div>
+					<div class="box zone"><img src="./graphics/f project gutenberg.JPG">Project Gutenberg (2018)</div>
+					<div class="box zone"><img src="./graphics/f protege.JPG">Protege (2007)</div>
+					<div class="box zone"><img src="./graphics/f shawshank redemption.JPG">Shawshank Redemption (1994)</div>
+					<div class="box zone"><img src="./graphics/f still human.JPG">Still Human (2018)</div>
+					<div class="box zone"><img src="./graphics/f three idiots.JPG">Three Idiots (2009)</div>
 				</div>
 			</div>
 		</div>
