--- a/film.html
+++ b/film.html
@@ -37,6 +37,7 @@
 					<div class="box zone"><img src="./graphics/f inception.JPG">Inception (2010)</div>
 					<div class="box zone"><img src="./graphics/f infernal affairs.JPG">Infernal Affairs (2002)</div>
 					<div class="box zone"><img src="./graphics/f life of pi.JPG">Life of Pi (2012)</div>
+					<div class="box zone"><img src="./graphics/f paycheck.JPG">Paycheck (2003)</div>
 					<div class="box zone"><img src="./graphics/f project gutenberg.JPG">Project Gutenberg (2018)</div>
 					<div class="box zone"><img src="./graphics/f protege.JPG">Protege (2007)</div>
 					<div class="box zone"><img src="./graphics/f shawshank redemption.JPG">Shawshank Redemption (1994)</div>
