--- a/film.html
+++ b/film.html
@@ -30,7 +30,9 @@
 					<div class="box zone"><img src="./graphics/f a beautiful mind.JPG">A Beautiful Mind (2001)</div>
 					<div class="box zone"><img src="./graphics/f back to the future.JPG">Back to the Future (1985)</div>
 					<div class="box zone"><img src="./graphics/f better days.JPG">Better Days (2019)</div>
+					<div class="box zone"><img src="./graphics/f cast away.jpg">Cast Away (2000)</div>
 					<div class="box zone"><img src="./graphics/f chungking express.JPG">Chungking Express (1994)</div>
+					<div class="box zone"><img src="./graphics/f click.jpg">Click (2006)</div>
 					<div class="box zone"><img src="./graphics/f control.JPG">Control (2013)</div>
 					<div class="box zone"><img src="./graphics/f eye in the sky.JPG">Eye in the Sky (2015)</div>
 					<div class="box zone"><img src="./graphics/f fagara.JPG">Fagara (2019)</div>
@@ -40,6 +42,7 @@
 					<div class="box zone"><img src="./graphics/f paycheck.JPG">Paycheck (2003)</div>
 					<div class="box zone"><img src="./graphics/f project gutenberg.JPG">Project Gutenberg (2018)</div>
 					<div class="box zone"><img src="./graphics/f protege.JPG">Protege (2007)</div>
+					<div class="box zone"><img src="./graphics/f Ready Player One.png">Ready Player One (2018)</div>
 					<div class="box zone"><img src="./graphics/f shawshank redemption.JPG">Shawshank Redemption (1994)</div>
 					<div class="box zone"><img src="./graphics/f still human.JPG">Still Human (2018)</div>
 					<div class="box zone"><img src="./graphics/f three idiots.JPG">Three Idiots (2009)</div>
