--- a/film.html
+++ b/film.html
@@ -38,6 +38,7 @@
 					<div class="box zone"><img src="./graphics/f fagara.JPG">Fagara (2019)</div>
 					<div class="box zone"><img src="./graphics/f inception.JPG">Inception (2010)</div>
 					<div class="box zone"><img src="./graphics/f infernal affairs.JPG">Infernal Affairs (2002)</div>
+					<div class="box zone"><img src="./graphics/f Jumanji Welcome to the Jungle.png">Jumanji: Welcome to the Jungle (2017)</div>
 					<div class="box zone"><img src="./graphics/f life of pi.JPG">Life of Pi (2012)</div>
 					<div class="box zone"><img src="./graphics/f paycheck.JPG">Paycheck (2003)</div>
 					<div class="box zone"><img src="./graphics/f project gutenberg.JPG">Project Gutenberg (2018)</div>
