--- a/story.html
+++ b/story.html
@@ -26,11 +26,14 @@
 			</div>
 			<div class="Middle">
 				<h1>.STORY.</h1>
-				<p><a href="https://www.instagram.com/daniel.dibraw/" target="_blank">@daniel.dibraw</a></p>
+				<p>
+				Stay tuned.
+				</p>
+				</div>
 			</div>
 		</div>
 		<div class="footer">
-			&#169 2020 danieldibraw.com
+			&#169 2021 danieldibraw.com
 		</div>
 	</div>
 
