--- a/story.html
+++ b/story.html
@@ -26,10 +26,7 @@
 			</div>
 			<div class="Middle">
 				<h1>.STORY.</h1>
-				<p>
-				Stay tuned.
-				</p>
-				</div>
+				<p>Stay tuned.</p>
 			</div>
 		</div>
 		<div class="footer">
